# openclaw-tracebridge

./: .gitignore  README.md  pyproject.toml
docs/: AGENT_LIGHTNING_BRIDGE_SPEC.md  AGENT_LIGHTNING_CONSUMER_SMOKE.md  CLOUD_TRAINING_SPLIT_PLAN.md  COMMUNITY_RFC_PRELIMINARY.md  DEVLOG.md  DOGFOOD_2026-02-09.md  DOGFOOD_AGENT_LIGHTNING_BRIDGE_2026-02-09.md  DOGFOOD_END2END_2026-02-09.md  DOGFOOD_REAL_OPT_LOOP_2026-02-09.md  INDEX.md  LANDSCAPE_AND_RATIONALE.md  PHASED_ADOPTION_PLAN.md  PHASE_A_V0_SPEC.md  PUBLIC_CHECKLIST_2026-02-09.md  REACTION_CALIBRATION_V1.md  REAL_OPTIMIZATION_LOOP.md  REPLAY_CONTRACT_V0.md  RESEARCH_AGENT_LIGHTNING_USAGE.md
scripts/: run_phase1_shadow_cycle.sh  run_real_optimization_loop_smoke.sh  smoke_agent_lightning_bridge.sh  smoke_end_to_end_lightning.sh
src/openclaw_tracebridge/: __init__.py  cli.py  consumer_smoke.py  io.py  optimization_loop.py  replay.py  runtime_hook.py  schema.py
src/openclaw_tracebridge/adapters/: openclaw_session.py
src/openclaw_tracebridge/exporters/: agent_lightning.py
tests/: test_cli.py  test_consumer_smoke.py  test_export_agent_lightning.py  test_importer.py  test_optimization_loop.py  test_replay.py  test_schema.py
